yamls/seldon/custom_prefix/grafana-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: seldon-system
spec:
  hosts:
  - "change-external-ip"
  gateways:
  - kubeflow/kubeflow-gateway
  http:
  - match:
    - uri:
        prefix: /grafana/
    name: metrics-route
    rewrite:
      uri: /
    route:
    - destination:
        host: seldon-core-analytics-grafana.seldon-system.svc.cluster.local
        port:
          number: 80
